Added license identifier

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "bettercp"
 authors = ["Shounak Das <shounakdas@protonmail.com>"]
 description = "A better way to copy files. Using bettercp, you can not only copy files to another location, but also rename it." 
+license = "MIT"
 version = "0.1.0"
 edition = "2021"
 
